welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (cigars>=40 && cigars<=60 && isWeekend=false) {
                                     ^cigarParty:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	else if (cigars>=40 && isWeekend=true) {
                            ^